# Roo-Code

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.roo/: README.md  dynamic_context_management.md  knowledge_storage_retrieval.md  planning_framework.md  summary.md  task_management_system.md
.roo/templates/ai-ml-project/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  wait-for-it.sh
.roo/templates/ai-ml-project/.github/: PULL_REQUEST_TEMPLATE.md
.roo/templates/ai-ml-project/.github/ISSUE_TEMPLATE/: config.yml
.roo/templates/ai-ml-project/.github/workflows/: ci.yml  code_of_conduct.yml  docs.yml  release.yml  security.yml
.roo/templates/ai-ml-project/config/: config.yaml  development.yaml  production.yaml  staging.yaml
.roo/templates/ai-ml-project/docs/: api.rst  api_template.md  architecture.md  architecture.rst  changelog.rst  code_documentation_template.md  conf.py  contributing.rst  data.md  data.rst  deployment.md  deployment.rst  developer_guide_template.md  documentation_standards.md  index.rst  installation.rst  license.rst  models.md  models.rst  project_documentation_template.md  project_overview.md  quickstart.rst  testing.rst  usage.rst  user_guide_template.md
.roo/templates/ai-ml-project/kubernetes/: README.md  alertmanagerconfig.yaml  certificate.yaml  clusterissuer.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  cronjob.yaml  daemonset.yaml  deployment.yaml  hpa.yaml  ingress.yaml  issuer.yaml  job.yaml  limitrange.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pv.yaml  pvc.yaml  rbac.yaml  resourcequota.yaml  sealedsecret.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml  storageclass.yaml
.roo/templates/ai-ml-project/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_model_evaluation.ipynb
.roo/templates/ai-ml-project/requirements/: base.txt  development.txt  production.txt  testing.txt
.roo/templates/ai-ml-project/scripts/: cleanup.sh  deploy.sh  evaluate.sh  init_project.py  run_tests.py  serve_model.py  setup.sh  train.sh  train_model.py
.roo/templates/ai-ml-project/src/: __init__.py  data_processor.py  main.py  model.py
.roo/templates/ai-ml-project/src/api/: __init__.py  main.py  models.py
.roo/templates/ai-ml-project/src/data/: __init__.py  data_loader.py
.roo/templates/ai-ml-project/src/models/: __init__.py  model_utils.py
.roo/templates/ai-ml-project/src/utils/: __init__.py  config.py  logger.py
.roo/templates/ai-ml-project/tests/: conftest.py  test_api.py  test_data.py  test_data_processor.py  test_example.py  test_model.py  test_models.py
docs/: IMPROVE.md  PLAN.md~  README.md  implementation-summary.md  migration-strategy.md  milvus.md  product-requirements.md  technical-analysis.md  technical-design.md
src/: extension.ts  package.json  package.nls.ca.json  package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.hi.json  package.nls.id.json  package.nls.it.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.nl.json  package.nls.pl.json  package.nls.pt-BR.json  package.nls.ru.json  package.nls.tr.json  package.nls.vi.json  (+2 more)
(+282 files in other folders)
